# picokey

./: .gitignore  .gitmodules  README.md  genkeys.sh  picokey.service
host/: Cargo.toml  Config.toml
host/src/: config.rs  error.rs  main.rs
keys/: rx_private.pem  rx_public.pem  tx_private.pem  tx_public.pem
pico/: .ccls  .gitignore  CMakeLists.txt
pico/lib/: buildlibs.sh
pico/lib/crypto/: .gitignore  Cargo.toml  build.rs
pico/lib/crypto/.cargo/: config
pico/lib/crypto/src/: aes_gcm_sivm.rs  base64m.rs  keyiv.rs  lib.rs
pico/lib/keys/: .gitignore  Cargo.toml  build.rs
pico/lib/keys/src/: lib.rs
pico/src/: main.c  rsa.c  rust_compat.c
pico/tools/: build.sh  flash.sh  setup.sh
