[package]
name = "host"
version = "0.1.0"
authors = ["Edwin Svensson <host@olback.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serialport = "4"
base64 = "0.13"
rand = "0.8"
aes-gcm-siv = "0.10"
giftwrap = "0.1"
