[package]
name = "crypto"
version = "0.1.0"
authors = ["Edwin Svensson <keys@olback.net>"]
edition = "2018"
build = "build.rs"

[lib]
crate-type = ["staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm-siv = { git = "https://github.com/RustCrypto/AEADs", branch = "master", features = [ "aes", "alloc", "force-soft" ], default-features = false }
base64 = { version = "0.13", features = [ "alloc" ], default-features = false }
mallocator = { git = "https://github.com/olback/mallocator", branch = "master" }

[build-dependencies]
cbindgen = "0.19"
