[package]
name = "keys"
version = "0.1.0"
authors = ["Edwin Svensson <keys@olback.net>"]
edition = "2018"
build = "build.rs"

[lib]
crate-type = ["staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
cbindgen = "0.19"
